Enhance application properties and error handling; update Swagger UI path and refine exception messages