@@ -1,5 +1,6 @@
 package com.ynz.ai.rag.ragdemo.config;
 
+import java.util.List;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.ai.transformer.splitter.TokenTextSplitter;
 import org.springframework.context.annotation.Bean;
@@ -12,6 +13,6 @@ public class VectorStoreConfig {
     @Bean
     public TokenTextSplitter textSplitter() {
         log.info("Configuring TokenTextSplitter with default chunk size: 800, overlap: 200");
-        return new TokenTextSplitter(800, 200, 5, 10000, true, java.util.Collections.emptyList());
+        return new TokenTextSplitter(800, 200, 5, 10000, true, List.of(';', '.', '!', '?', '\n'));
     }
 }
